fix h1 spacing

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -19,7 +19,10 @@ footer p {
 h1 {
     font-family: 'Birthstone Bounce', cursive;
     font-size: 3em;
+    width: min-content;
+    min-width: 125px;
 }
+
 
 h2 {
     margin-top: 3em;
